tests/rep-poly/RepPolyTuple4.stderr
RepPolyTuple4.hs:8:7: error: [GHC-55287]
    • • The first component of the unboxed tuple
        does not have a fixed runtime representation.
        Its type is:
          a1 :: TYPE k0
        When unifying:
          • a0 -> b0 -> (# a0, b0 #)
          • a -> a -> (# a, a #)
      • The second component of the unboxed tuple
        does not have a fixed runtime representation.
        Its type is:
          b :: TYPE k1
        When unifying:
          • a0 -> b0 -> (# a0, b0 #)
          • a -> a -> (# a, a #)
    • In the expression: (#,#) @_ @_
      In an equation for ‘bar’: bar = (#,#) @_ @_

